# terramagic

./: .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt  terraform_magic.py  terramagic.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feature_request.yml  how_toquestion.md
.github/workflows/: build.yaml
libs/: datalib.py
