[tool.poetry]
name = "terramagic"
version = "0.1.1"
description = "A automate tool for terraform projects"
authors = ["Milton Jesus <milton.lima@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/miltlima/terramagic"
repository = "https://github.com/miltlima/terramagic"
keywords = ["terraform", "terramagic", "python"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.4"
termcolor = "^1.1.0"
click = "^8.0.3"
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"

[tool.poetry.scripts]
terramagic = "terramagic:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
